jupyter notebook - numpy project

--- a/Udacity/Course 3/Unit3-numpy/my_notebook_ndarrays_2.ipynb
+++ b/Udacity/Course 3/Unit3-numpy/my_notebook_ndarrays_2.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -331,12 +331,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interesting ways to change the shape of an array from 1D to 2D ##"
+    "## Broadcasting something over the whole array ##\n",
+    "\n",
+    "Interesting ways to change the shape of an array from 1D to 2D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -344,29 +346,36 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " [1 2 3]\n",
+      " [  10  100 1000]\n",
       "\n",
-      " [[1]\n",
-      " [2]\n",
-      " [3]]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "array() takes from 1 to 2 positional arguments but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[79], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m y \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m, y)\n\u001b[1;32m----> 7\u001b[0m z \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m], [\u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m6\u001b[39m], [\u001b[38;5;241m7\u001b[39m, \u001b[38;5;241m8\u001b[39m, \u001b[38;5;241m9\u001b[39m])\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m, z)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# this will add x to each row of z\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: array() takes from 1 to 2 positional arguments but 3 were given"
+      " [[  10]\n",
+      " [ 100]\n",
+      " [1000]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "\n",
+      "This adds the array to every row of the 2D array\n",
+      "\n",
+      " [[  11  102 1003]\n",
+      " [  14  105 1006]\n",
+      " [  17  108 1009]]\n",
+      "\n",
+      "This adds the array to every column of the 2D array\n",
+      "\n",
+      " [[  11   12   13]\n",
+      " [ 104  105  106]\n",
+      " [1007 1008 1009]]\n"
      ]
     }
    ],
    "source": [
-    "x = np.array([1, 2, 3])\n",
+    "# 1d array\n",
+    "x = np.array([10, 100, 1000])\n",
     "print('\\n', x)\n",
     "\n",
+    "# 2D array - notice the double brackets\n",
     "y = x.reshape(3, 1)\n",
     "print('\\n', y)\n",
     "\n",
@@ -374,10 +383,78 @@
     "print('\\n', z)\n",
     "\n",
     "# this will add x to each row of z\n",
+    "print('\\nThis adds the array to every row of the 2D array')\n",
     "print('\\n', x + z)\n",
     "\n",
     "# this will add y to each column of z\n",
+    "print('\\nThis adds the array to every column of the 2D array')\n",
     "print('\\n', y + z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "x =  [1 2 3]\n",
+      "\n",
+      "\n",
+      "Y = \n",
+      " [[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "\n",
+      "\n",
+      "Z = \n",
+      " [[1]\n",
+      " [2]\n",
+      " [3]]\n",
+      "\n",
+      "x + Y = \n",
+      " [[ 2  4  6]\n",
+      " [ 5  7  9]\n",
+      " [ 8 10 12]]\n",
+      "\n",
+      "Z + Y = \n",
+      " [[ 2  3  4]\n",
+      " [ 6  7  8]\n",
+      " [10 11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We create a rank 1 ndarray\n",
+    "x = np.array([1,2,3])\n",
+    "\n",
+    "# We create a 3 x 3 ndarray\n",
+    "Y = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+    "\n",
+    "# We create a 3 x 1 ndarray\n",
+    "Z = np.array([1,2,3]).reshape(3,1)\n",
+    "\n",
+    "# We print x\n",
+    "print()\n",
+    "print('x = ', x)\n",
+    "print()\n",
+    "\n",
+    "# We print Y\n",
+    "print()\n",
+    "print('Y = \\n', Y)\n",
+    "print()\n",
+    "\n",
+    "# We print Z\n",
+    "print()\n",
+    "print('Z = \\n', Z)\n",
+    "print()\n",
+    "\n",
+    "print('x + Y = \\n', x + Y)\n",
+    "print()\n",
+    "print('Z + Y = \\n',Z + Y)"
    ]
   }
  ],
