--- a/Udacity/Course 3/Unit3-numpy/using-built-in-functions-to-create-ndarrays.ipynb
+++ b/Udacity/Course 3/Unit3-numpy/using-built-in-functions-to-create-ndarrays.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -21,9 +32,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "X = \n",
+      " [[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n",
+      "\n",
+      "X has dimensions: (3, 4)\n",
+      "X is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in X are of type: int32\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a 3 x 4 ndarray full of zeros. \n",
     "X = np.zeros((3,4), dtype=int)\n",
@@ -48,9 +75,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "X = \n",
+      " [[1. 1.]\n",
+      " [1. 1.]\n",
+      " [1. 1.]]\n",
+      "\n",
+      "X has dimensions: (3, 2)\n",
+      "X is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in X are of type: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a 3 x 2 ndarray full of ones. \n",
     "X = np.ones((3,2))\n",
@@ -75,9 +118,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "X = \n",
+      " [[5 5 5]\n",
+      " [5 5 5]]\n",
+      "\n",
+      "X has dimensions: (2, 3)\n",
+      "X is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in X are of type: int32\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a 2 x 3 ndarray full of fives. \n",
     "X = np.full((2,3), 5) \n",
@@ -102,9 +160,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "X = \n",
+      " [[1. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0.]\n",
+      " [0. 0. 1. 0. 0.]\n",
+      " [0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 1.]]\n",
+      "\n",
+      "X has dimensions: (5, 5)\n",
+      "X is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in X are of type: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a 5 x 5 Identity matrix. \n",
     "X = np.eye(5)\n",
@@ -129,9 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "X = \n",
+      " [[10  0  0  0]\n",
+      " [ 0 20  0  0]\n",
+      " [ 0  0 30  0]\n",
+      " [ 0  0  0 50]]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a 4 x 4 diagonal matrix that contains the numbers 10,20,30, and 50\n",
     "# on its main diagonal\n",
@@ -153,9 +243,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "x =  [0 1 2 3 4 5 6 7 8 9]\n",
+      "\n",
+      "x has dimensions: (10,)\n",
+      "x is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in x are of type: int32\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a rank 1 ndarray that has sequential integers from 0 to 9\n",
     "x = np.arange(10)\n",
@@ -180,9 +283,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "x =  [4 5 6 7 8 9]\n",
+      "\n",
+      "x has dimensions: (6,)\n",
+      "x is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in x are of type: int32\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a rank 1 ndarray that has sequential integers from 4 to 9. \n",
     "x = np.arange(4,10)\n",
@@ -207,9 +323,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "x =  [ 1  4  7 10 13]\n",
+      "\n",
+      "x has dimensions: (5,)\n",
+      "x is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in x are of type: int32\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a rank 1 ndarray that has evenly spaced integers from 1 to 13 in steps of 3.\n",
     "x = np.arange(1,14,3)\n",
@@ -235,9 +364,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "x = \n",
+      " [ 0.          2.77777778  5.55555556  8.33333333 11.11111111 13.88888889\n",
+      " 16.66666667 19.44444444 22.22222222 25.        ]\n",
+      "\n",
+      "x has dimensions: (10,)\n",
+      "x is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in x are of type: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a rank 1 ndarray that has 10 integers evenly spaced between 0 and 25.\n",
     "x = np.linspace(0,25,10)\n",
@@ -262,9 +406,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "x =  [ 0.   2.5  5.   7.5 10.  12.5 15.  17.5 20.  22.5]\n",
+      "\n",
+      "x has dimensions: (10,)\n",
+      "x is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in x are of type: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a rank 1 ndarray that has 10 integers evenly spaced between 0 and 25,\n",
     "# with 25 excluded.\n",
@@ -291,9 +448,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original x =  [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19]\n",
+      "\n",
+      "\n",
+      "Reshaped x = \n",
+      " [[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]]\n",
+      "\n",
+      "x has dimensions: (4, 5)\n",
+      "x is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in x are of type: int32\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a rank 1 ndarray with sequential integers from 0 to 19\n",
     "x = np.arange(20)\n",
@@ -327,9 +504,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Y = \n",
+      " [[ 0  1  2  3  4]\n",
+      " [ 5  6  7  8  9]\n",
+      " [10 11 12 13 14]\n",
+      " [15 16 17 18 19]]\n",
+      "\n",
+      "Y has dimensions: (4, 5)\n",
+      "Y is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in Y are of type: int32\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a a rank 1 ndarray with sequential integers from 0 to 19 and\n",
     "# reshape it to a 4 x 5 array \n",
@@ -355,9 +549,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "X = \n",
+      " [[ 0.  5.]\n",
+      " [10. 15.]\n",
+      " [20. 25.]\n",
+      " [30. 35.]\n",
+      " [40. 45.]]\n",
+      "\n",
+      "X has dimensions: (5, 2)\n",
+      "X is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in X are of type: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a rank 1 ndarray with 10 integers evenly spaced between 0 and 50,\n",
     "# with 50 excluded. We then reshape it to a 5 x 2 ndarray\n",
@@ -383,9 +595,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "X = \n",
+      " [[0.475052   0.5453645  0.12235426]\n",
+      " [0.4841976  0.0038315  0.70186774]\n",
+      " [0.28089918 0.13838211 0.8898271 ]]\n",
+      "\n",
+      "X has dimensions: (3, 3)\n",
+      "X is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in x are of type: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a 3 x 3 ndarray with random floats in the half-open interval [0.0, 1.0).\n",
     "X = np.random.random((3,3))\n",
@@ -410,9 +638,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "X = \n",
+      " [[ 7  6]\n",
+      " [13  6]\n",
+      " [ 7  5]]\n",
+      "\n",
+      "X has dimensions: (3, 2)\n",
+      "X is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in X are of type: int32\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a 3 x 2 ndarray with random integers in the half-open interval [4, 15).\n",
     "X = np.random.randint(4,15,size=(3,2))\n",
@@ -437,9 +681,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "X = \n",
+      " [[ 0.0524898   0.07222314 -0.00548954 ...  0.05818156  0.05091215\n",
+      "  -0.11868947]\n",
+      " [-0.20987511 -0.02900821 -0.0324933  ...  0.01627103 -0.08301103\n",
+      "   0.06248726]\n",
+      " [ 0.12004119 -0.04103121 -0.08168872 ... -0.22519552  0.15787244\n",
+      "  -0.03622087]\n",
+      " ...\n",
+      " [-0.01895154  0.02147684 -0.0807534  ...  0.08575843  0.02432218\n",
+      "  -0.17088854]\n",
+      " [-0.0558988   0.01833127  0.06237935 ... -0.12986576 -0.10612003\n",
+      "  -0.07953781]\n",
+      " [ 0.26628125 -0.0171106  -0.06139191 ... -0.12103634 -0.03206464\n",
+      "  -0.10533861]]\n",
+      "\n",
+      "X has dimensions: (1000, 1000)\n",
+      "X is an object of type: <class 'numpy.ndarray'>\n",
+      "The elements in X are of type: float64\n",
+      "The elements in X have a mean of: -8.604587313965183e-05\n",
+      "The maximum value in X is: 0.4538258010850405\n",
+      "The minimum value in X is: -0.46681175626133653\n",
+      "X has 500015 negative numbers\n",
+      "X has 499985 positive numbers\n"
+     ]
+    }
+   ],
    "source": [
     "# We create a 1000 x 1000 ndarray of random floats drawn from normal (Gaussian) distribution\n",
     "# with a mean of zero and a standard deviation of 0.1.\n",
@@ -471,7 +746,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -485,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
