--- a/Udacity/Course 3/Unit4-pandas/pandas_4.9_DataFrames.ipynb
+++ b/Udacity/Course 3/Unit4-pandas/pandas_4.9_DataFrames.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -22,10 +22,10 @@
       " {'Bob': bike     10\n",
       "pants    20\n",
       "watch    50\n",
-      "dtype: int64, 'Mary': house    1\n",
-      "car      2\n",
-      "pen      3\n",
-      "pants    4\n",
+      "dtype: int64, 'Mary': house    400000\n",
+      "car       15000\n",
+      "pen           3\n",
+      "pants         4\n",
       "dtype: int64}\n",
       "--------------------\n",
       "\n",
@@ -40,7 +40,7 @@
     "    print('--------------------')\n",
     "    print('\\n', z)\n",
     "\n",
-    "items = {'Bob':pd.Series([10, 20, 50], index=['bike', 'pants', 'watch']), 'Mary':pd.Series([1, 2, 3, 4], index=['house', 'car', 'pen', 'pants'])}\n",
+    "items = {'Bob':pd.Series([10, 20, 50], index=['bike', 'pants', 'watch']), 'Mary':pd.Series([400000, 15000, 3, 4], index=['house', 'car', 'pen', 'pants'])}\n",
     "pp(items)\n",
     "\n",
     "pp(type(items))\n",
@@ -53,6 +53,9 @@
    "source": [
     "## Think of DataFrames like a spreadsheet ##\n",
     "\n",
+    "1) create a dictionary of Series\n",
+    "2) pass it into DataFrame object\n",
+    "\n",
     "displays in tabular form, with rows and columns\n",
     "\n",
     "rows are the union of the indexes from the panda Series in the dictionary (if no indexes, it will use numerical indexes)\n",
@@ -62,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -99,12 +102,12 @@
        "    <tr>\n",
        "      <th>car</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>15000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>house</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>400000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>pants</th>\n",
@@ -126,16 +129,16 @@
        "</div>"
       ],
       "text/plain": [
-       "        Bob  Mary\n",
-       "bike   10.0   NaN\n",
-       "car     NaN   2.0\n",
-       "house   NaN   1.0\n",
-       "pants  20.0   4.0\n",
-       "pen     NaN   3.0\n",
-       "watch  50.0   NaN"
+       "        Bob      Mary\n",
+       "bike   10.0       NaN\n",
+       "car     NaN   15000.0\n",
+       "house   NaN  400000.0\n",
+       "pants  20.0       4.0\n",
+       "pen     NaN       3.0\n",
+       "watch  50.0       NaN"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +258,7 @@
        "6    7   NaN"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +299,7 @@
        "Index(['Bob', 'Mary'], dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +325,7 @@
        "Index(['bike', 'car', 'house', 'pants', 'pen', 'watch'], dtype='object')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,10 +336,575 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.0e+01,     nan],\n",
+       "       [    nan, 1.5e+04],\n",
+       "       [    nan, 4.0e+05],\n",
+       "       [2.0e+01, 4.0e+00],\n",
+       "       [    nan, 3.0e+00],\n",
+       "       [5.0e+01,     nan]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shopping_carts.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 2)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shopping_carts.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shopping_carts.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shopping_carts.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bob</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bike</th>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pants</th>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>watch</th>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Bob\n",
+       "bike    10\n",
+       "pants   20\n",
+       "watch   50"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bobs_shopping = pd.DataFrame(items, columns=['Bob'])\n",
+    "bobs_shopping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Bob</th>\n",
+       "      <th>Mary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>car</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>house</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>400000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Bob    Mary\n",
+       "car    NaN   15000\n",
+       "house  NaN  400000"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big_ticket = pd.DataFrame(items, index=['car', 'house'])\n",
+    "big_ticket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>car</th>\n",
+       "      <td>15000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>house</th>\n",
+       "      <td>400000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Mary\n",
+       "car     15000\n",
+       "house  400000"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alice_big_ticket = pd.DataFrame(items, index=['car', 'house'], columns=['Mary'])\n",
+    "alice_big_ticket"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Manually create DataFrames from a dictionary of lists\n",
+    "\n",
+    "1) create a dictionary of arrays\n",
+    "2) pass it into DataFrames\n",
+    "\n",
+    "Needs to be of the same length, since it's not a panda Series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Integers</th>\n",
+       "      <th>Floats</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Integers  Floats\n",
+       "0         3     1.0\n",
+       "1         4     2.0\n",
+       "2         5     3.0\n",
+       "3         6     4.0"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {'Integers': [3, 4, 5, 6], 'Floats':[1.0, 2.0, 3.0, 4.0]}\n",
+    "\n",
+    "data_df = pd.DataFrame(data)\n",
+    "data_df\n",
+    "                    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because it's not a panda Series, it doesn't have indexes\n",
+    "\n",
+    "Can add them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Integers</th>\n",
+       "      <th>Floats</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>first</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>second</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>third</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fourth</th>\n",
+       "      <td>6</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Integers  Floats\n",
+       "first          3     1.0\n",
+       "second         4     2.0\n",
+       "third          5     3.0\n",
+       "fourth         6     4.0"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_df = pd.DataFrame(data, index=['first', 'second', 'third', 'fourth'])\n",
+    "data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pants</th>\n",
+       "      <th>shirt</th>\n",
+       "      <th>tv</th>\n",
+       "      <th>laptop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   pants  shirt     tv  laptop\n",
+       "0  100.0   15.0    NaN     NaN\n",
+       "1    NaN    NaN  800.0  1000.0"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_of_dics = [{'pants':100, 'shirt':15}, {'tv':800, 'laptop':1000}]\n",
+    "df = pd.DataFrame(list_of_dics)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pants</th>\n",
+       "      <th>shirt</th>\n",
+       "      <th>tv</th>\n",
+       "      <th>laptop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>clothing</th>\n",
+       "      <td>100.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>electronics</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             pants  shirt     tv  laptop\n",
+       "clothing     100.0   15.0    NaN     NaN\n",
+       "electronics    NaN    NaN  800.0  1000.0"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(list_of_dics, index=['clothing', 'electronics'])\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
