--- a/Udacity/Course 3/Unit4-pandas/pandas_4.9_DataFrames.ipynb
+++ b/Udacity/Course 3/Unit4-pandas/pandas_4.9_DataFrames.ipynb
@@ -34,12 +34,13 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "\n",
     "\n",
     "def pp(z):\n",
     "    print('--------------------')\n",
     "    print('\\n', z)\n",
     "\n",
+    "# just a regular dictionary\n",
     "items = {'Bob':pd.Series([10, 20, 50], index=['bike', 'pants', 'watch']), 'Mary':pd.Series([400000, 15000, 3, 4], index=['house', 'car', 'pen', 'pants'])}\n",
     "pp(items)\n",
     "\n",
