Seaborn and Matplotlib

--- a/Udacity/Course 3/Unit4-pandas/pandas_4.9_DataFrames.ipynb
+++ b/Udacity/Course 3/Unit4-pandas/pandas_4.9_DataFrames.ipynb
@@ -5,12 +5,29 @@
    "metadata": {},
    "source": [
     "# Creating DataFrames #\n",
+    "\n",
+    "Panda Series contains tabular data of rows and columns\n",
+    "\n",
+    "DataFrames recognizes when:\n",
+    "- a dictionary contains pandas Series as values. Uses the key as column label\n",
+    "- a list contains dictionaries\n",
+    "\n",
+    "\n",
+    "1) Create a dictionary of panda Series - items = {k:v, k:v, k:v} where v = pd.Series()\n",
+    "\n",
+    "OR create a list of dictionaries - items = [{k:v}, {k:v}, {k:v}]\n",
+    "\n",
+    "2) then put it into a DataFrame object and it returns a well formatted var - df = pd.DataFrames(items)\n",
+    "\n",
+    "3) the key is always the column label\n",
+    "\n",
+    "Note, you can also specify pd.DataFrame[X, index=Y, column=Z]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +51,7 @@
     }
    ],
    "source": [
-    "\n",
+    "import pandas as pd\n",
     "\n",
     "def pp(z):\n",
     "    print('--------------------')\n",
@@ -42,6 +59,7 @@
     "\n",
     "# just a regular dictionary\n",
     "items = {'Bob':pd.Series([10, 20, 50], index=['bike', 'pants', 'watch']), 'Mary':pd.Series([400000, 15000, 3, 4], index=['house', 'car', 'pen', 'pants'])}\n",
+    "\n",
     "pp(items)\n",
     "\n",
     "pp(type(items))\n",
@@ -66,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -139,12 +157,14 @@
        "watch  50.0       NaN"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "shopping_carts = pd.DataFrame(items)\n",
     "shopping_carts"
    ]
