--- a/Udacity/Course 3/Unit4-pandas/pandas_4.10_manipulate_DataFrames.ipynb
+++ b/Udacity/Course 3/Unit4-pandas/pandas_4.10_manipulate_DataFrames.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -34,37 +34,23 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>bikes</th>\n",
-       "      <th>pants</th>\n",
-       "      <th>watches</th>\n",
-       "      <th>cars</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>100</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   bikes  pants  watches     cars\n",
-       "0    100   25.0     35.0      NaN\n",
-       "1   1000    NaN      NaN  10000.0"
+       "   bikes\n",
+       "0    100"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,8 +58,10 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "items = [{'bikes':100, 'pants':25, 'watches':35}, {'bikes':1000, 'cars':10000}]\n",
+    "#items = [{'bikes':100, 'pants':25, 'watches':35}, {'bikes':1000, 'cars':10000}]\n",
     "\n",
+    "items = [{'bikes':100}]\n",
+    "         \n",
     "# will just specify a number for each row label\n",
     "df_stores = pd.DataFrame(items)\n",
     "df_stores\n",
@@ -82,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +125,7 @@
        "store 2   1000    NaN      NaN  10000.0"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +194,7 @@
        "store 2   1000"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +254,7 @@
        "store 2   1000    NaN"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +300,7 @@
        "1000"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +376,7 @@
        "store 2   1000    NaN      NaN  10000.0      25"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +449,7 @@
        "store 2   1000    NaN      NaN  10000.0      25    NaN"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +513,7 @@
        "store 3      2       10  2000"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +601,7 @@
        "store 3      2    NaN     10.0   2000.0     NaN    NaN"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +696,7 @@
        "store 3      2    NaN     10.0   2000.0     NaN    NaN         10.0"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +796,7 @@
        "store 3      2    NaN     10.0     25   2000.0     NaN    NaN         10.0"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,10 +808,419 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bikes</th>\n",
+       "      <th>pants</th>\n",
+       "      <th>watches</th>\n",
+       "      <th>shoes</th>\n",
+       "      <th>cars</th>\n",
+       "      <th>shirts</th>\n",
+       "      <th>suits</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>store 1</th>\n",
+       "      <td>100</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>store 2</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>200</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>store 3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         bikes  pants  watches  shoes     cars  shirts  suits\n",
+       "store 1    100   25.0     35.0     50      NaN    10.0   35.0\n",
+       "store 2   1000    NaN      NaN    200  10000.0    25.0    NaN\n",
+       "store 3      2    NaN     10.0     25   2000.0     NaN    NaN"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stores.pop('new watches')\n",
+    "df_stores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bikes</th>\n",
+       "      <th>pants</th>\n",
+       "      <th>watches</th>\n",
+       "      <th>shoes</th>\n",
+       "      <th>cars</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>store 1</th>\n",
+       "      <td>100</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>store 2</th>\n",
+       "      <td>1000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>200</td>\n",
+       "      <td>10000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>store 3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         bikes  pants  watches  shoes     cars\n",
+       "store 1    100   25.0     35.0     50      NaN\n",
+       "store 2   1000    NaN      NaN    200  10000.0\n",
+       "store 3      2    NaN     10.0     25   2000.0"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stores = df_stores.drop(['suits', 'shirts'], axis=1)\n",
+    "df_stores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bikes</th>\n",
+       "      <th>pants</th>\n",
+       "      <th>watches</th>\n",
+       "      <th>shoes</th>\n",
+       "      <th>cars</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>store 3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         bikes  pants  watches  shoes    cars\n",
+       "store 3      2    NaN     10.0     25  2000.0"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stores = df_stores.drop(['store 1', 'store 2'], axis=0)\n",
+    "df_stores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hats</th>\n",
+       "      <th>pants</th>\n",
+       "      <th>watches</th>\n",
+       "      <th>shoes</th>\n",
+       "      <th>cars</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>store 3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         hats  pants  watches  shoes    cars\n",
+       "store 3     2    NaN     10.0     25  2000.0"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stores = df_stores.rename(columns={'bikes':'hats'})\n",
+    "df_stores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hats</th>\n",
+       "      <th>pants</th>\n",
+       "      <th>watches</th>\n",
+       "      <th>shoes</th>\n",
+       "      <th>cars</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>My store</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          hats  pants  watches  shoes    cars\n",
+       "My store     2    NaN     10.0     25  2000.0"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stores = df_stores.rename(index={'store 3':'My store'})\n",
+    "df_stores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hats</th>\n",
+       "      <th>watches</th>\n",
+       "      <th>shoes</th>\n",
+       "      <th>cars</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pants</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NaN</th>\n",
+       "      <td>2</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>2000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       hats  watches  shoes    cars\n",
+       "pants                              \n",
+       "NaN       2     10.0     25  2000.0"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_stores = df_stores.set_index('pants')\n",
+    "df_stores"
+   ]
   }
  ],
  "metadata": {
