Seaborn bar graphs of NaNs

--- a/Udacity/Course 3/Unit4-pandas/pandas_4.10_manipulate_DataFrames.ipynb
+++ b/Udacity/Course 3/Unit4-pandas/pandas_4.10_manipulate_DataFrames.ipynb
@@ -1034,6 +1034,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### rename ###"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 201,
    "metadata": {},
