Implementing gradient descent - quiz

--- a/Udacity/Course 6 - Neural Networks/Unit 3 - Implementing Gradient Descent/gradient_descent_quiz.ipynb
+++ b/Udacity/Course 6 - Neural Networks/Unit 3 - Implementing Gradient Descent/gradient_descent_quiz.ipynb
@@ -4,14 +4,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good job!\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
+    "\n",
     "def sigmoid(x):\n",
     "    \"\"\"\n",
     "    Calculate sigmoid\n",
     "    \"\"\"\n",
     "    return 1/(1+np.exp(-x))\n",
+    "\n",
     "def sigmoid_prime(x):\n",
     "    \"\"\"\n",
     "    # Derivative of the sigmoid function\n",
@@ -29,7 +39,11 @@
     "### Note: Some steps have been consolidated, so there are\n",
     "###       fewer variable names than in the above sample code\n",
     "# TODO: Calculate the node's linear combination of inputs and weights\n",
-    "h = None\n",
+    "\n",
+    "h = np.dot(x, w)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "### Notebook grading\n",
     "import numpy as np\n",
@@ -44,6 +58,24 @@
     "else:\n",
     "    print(\"Try again. `h` is not correct.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "y_hat = sigmoid(h)\n",
+    "\n",
+    "error = y - y_hat\n",
+    "\n",
+    "gradient = sigmoid_prime(h)\n",
+    "\n",
+    "error_term = error * gradient\n",
+    "\n",
+    "del_w = learnrate * error_term * x\n"
+   ]
   }
  ],
  "metadata": {
@@ -53,7 +85,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
