--- a/Udacity/Course 6 - Neural Networks/Unit 2 - Intro NN/2.25 - GradientDescent.ipynb
+++ b/Udacity/Course 6 - Neural Networks/Unit 2 - Intro NN/2.25 - GradientDescent.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -114,10 +114,7 @@
     "    '''\n",
     "    Input: x is an array of points\n",
     "    '''\n",
-    "\n",
-    "    #print(f'sigmoid: {1/(1+np.exp(-np.array(x, dtype=float)))} \\n')\n",
-    "    \n",
-    "    return 1/(1+np.exp(-np.array(x, dtype=float))) \n",
+    "    return 1/(1+np.exp(-x)) \n",
     "\n",
     "# Output (prediction) formula\n",
     "def output_formula(features, weights, bias):\n",
@@ -129,55 +126,16 @@
     "    Returns the prediction of what the line should look like\n",
     "    '''\n",
     "\n",
-    "    # multiply all the features by their weights and sum them up\n",
-    "    # then add the bias\n",
-    "\n",
-    "    output = sigmoid(np.dot(features, weights) + bias)\n",
-    "    #print(f'output: {output} \\n')\n",
-    "    \n",
-    "    return output\n",
+    "    return sigmoid(weights[0]*features[0] + weights[1]*features[1] + bias)\n",
     "\n",
     "# Error (log-loss) formula\n",
     "def error_formula(y, output):\n",
-    "    '''\n",
-    "    Input\n",
-    "        y: actual value\n",
-    "        output: prediction\n",
-    "    Returns the error of the prediction\n",
-    "    '''\n",
-    "    error = -y * np.log(output) - (1-y) * np.log(1-output)\n",
-    "    #print(f'error: {error} \\n')\n",
     "    \n",
-    "    return error\n",
     "    \n",
     "\n",
     "# Gradient descent step\n",
     "def update_weights(x, y, weights, bias, learnrate):\n",
-    "    '''\n",
-    "    Input\n",
-    "        x: array of points\n",
-    "        y: actual value\n",
-    "        weights: array of weights\n",
-    "        bias: bias\n",
-    "        learnrate: learning rate\n",
-    "    Returns the updated weights and bias\n",
-    "    '''\n",
-    "\n",
-    "    # call the output_formula to get the prediction\n",
-    "    output = output_formula(x, weights, bias)\n",
-    "    \n",
-    "    # calculate the error by subtracting the prediction from the actual value\n",
-    "    error = y - output\n",
-    "    \n",
-    "    # update the weights\n",
-    "    weights[0] += learnrate * error * x[0] \n",
-    "    weights[1] += learnrate * error * x[1]\n",
-    "\n",
-    "    # update the bias\n",
-    "    bias += learnrate * error\n",
-    "   \n",
-    "    # print(f'weights: {weights} \\n')\n",
-    "    return weights, bias"
+    "    pass"
    ]
   },
   {
@@ -190,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -199,7 +157,6 @@
     "np.random.seed(44)\n",
     "\n",
     "epochs = 100\n",
-    "# epochs = 3\n",
     "learnrate = 0.01\n",
     "\n",
     "def train(features, targets, epochs, learnrate, graph_lines=False):\n",
@@ -263,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
