forward pass of a neural network with a hidden layer

--- a/Udacity/Course 6 - Neural Networks/Unit 3 - Implementing Gradient Descent/simple_gradient_descent.ipynb
+++ b/Udacity/Course 6 - Neural Networks/Unit 3 - Implementing Gradient Descent/simple_gradient_descent.ipynb
@@ -15,9 +15,10 @@
     "\n",
     "1) calculate h (sum of (w1x1))\n",
     "2) apply sigmoid to h --> this is y_hat\n",
+    "\n",
     "3) calculate the ERROR --> (y - y_hat) which is how far off the point is from the y\n",
     "\n",
-    "4) calculate the gradient --> f'(h) which is the derivative of the sigmoid\n",
+    "4) apply the sigmoid prime (derivative) to h --> this is the gradient f'(h) \n",
     "5) calculate the ERROR TERM --> ERROR * gradient\n",
     "6) calculate the new weights --> LR * ERROR TERM * input"
    ]
@@ -72,10 +73,10 @@
     "print(f'this is the error term (delta): {error_term}')\n",
     "\n",
     "# Gradient descent step \n",
-    "del_w = [ learnrate  *error_term*  x[0],\n",
+    "grad_dec = [ learnrate  *error_term*  x[0],\n",
     "          learnrate  *error_term*  x[1]]\n",
     "# or del_w = learnrate  *error_term*  x\n",
-    "print(f'this is the del_w: {del_w}')"
+    "print(f'this is the grad_dec: {grad_dec}')"
    ]
   }
  ],
