Add Pytorch Unit

--- a/Udacity/Course 6 - Neural Networks/Unit 3 - Implementing Gradient Descent/3.12- forward_backpropagation_weights.ipynb
+++ b/Udacity/Course 6 - Neural Networks/Unit 3 - Implementing Gradient Descent/3.12- forward_backpropagation_weights.ipynb
@@ -1,103 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image](3.12_1.png)\n",
+    "![image](3.12_2.png)\n",
+    "![image](3.12_3.png)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Heinz\\python\\projects\\Udacity\\Course 6 - Neural Networks\\Unit 3 - Implementing Gradient Descent\\data_prep.py:18: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[-1.79801097  0.62588442  1.83783211  0.45274903 -0.58606328  1.49156134\n",
-      " -0.23979251 -1.62487559 -0.41292789  0.97215519  1.83783211 -1.27860482\n",
-      "  1.49156134  0.97215519  0.97215519 -0.93233405  1.66469673 -1.97114636\n",
-      "  1.83783211 -0.41292789 -0.75919866  0.62588442  0.10647826  0.7990198\n",
-      "  1.49156134  1.83783211  0.27961365 -0.58606328  1.66469673 -0.58606328\n",
-      " -0.41292789  1.49156134  0.10647826  1.83783211 -1.97114636 -1.62487559\n",
-      " -0.06665712 -0.58606328 -0.75919866 -0.58606328 -0.23979251 -0.06665712\n",
-      "  0.10647826 -0.75919866  0.97215519 -1.10546943 -0.06665712 -0.75919866\n",
-      " -1.27860482 -1.62487559  0.45274903 -1.27860482  1.31842596  0.7990198\n",
-      "  0.62588442  1.31842596 -0.23979251 -1.79801097 -1.62487559  0.10647826\n",
-      "  0.27961365 -0.23979251  0.45274903  0.7990198  -0.06665712  0.10647826\n",
-      "  1.31842596  0.27961365 -0.06665712  1.83783211  0.45274903 -2.49055251\n",
-      " -0.93233405 -0.06665712  1.14529057  1.14529057 -0.23979251  1.83783211\n",
-      " -0.41292789  0.27961365  0.97215519  0.27961365 -0.75919866 -1.79801097\n",
-      " -0.75919866 -0.58606328  0.10647826  0.10647826  0.97215519  0.62588442\n",
-      "  0.97215519  1.14529057  1.83783211 -0.06665712  0.62588442  0.62588442\n",
-      "  0.45274903 -0.93233405  0.97215519 -1.62487559 -2.14428174 -0.06665712\n",
-      " -1.79801097 -0.41292789  0.62588442  1.31842596  0.97215519 -0.93233405\n",
-      " -1.62487559 -0.93233405  0.7990198  -1.4517402  -1.97114636  0.10647826\n",
-      "  1.14529057  0.27961365 -1.27860482  0.97215519  1.83783211 -2.14428174\n",
-      " -0.58606328 -0.93233405 -0.58606328 -0.75919866  1.14529057 -0.41292789\n",
-      "  0.10647826  1.31842596 -0.41292789 -1.10546943  0.27961365  0.45274903\n",
-      " -0.06665712 -0.75919866 -0.23979251 -0.75919866 -0.23979251  0.97215519\n",
-      "  0.27961365  0.10647826  0.45274903  0.97215519  0.27961365 -0.06665712\n",
-      " -0.06665712 -1.79801097 -0.93233405 -0.23979251 -0.93233405  1.31842596\n",
-      "  1.83783211 -1.62487559  0.45274903 -0.06665712  0.27961365 -0.06665712\n",
-      " -0.23979251 -0.93233405  0.62588442  0.97215519  0.10647826  0.45274903\n",
-      "  0.97215519 -0.58606328 -0.06665712  0.97215519 -1.27860482  1.14529057\n",
-      " -0.75919866  0.10647826 -1.62487559 -0.41292789  0.7990198   1.83783211\n",
-      " -0.75919866  0.27961365 -0.58606328  0.27961365  0.27961365 -2.49055251\n",
-      "  0.27961365 -0.75919866  0.97215519 -0.41292789 -0.75919866  1.83783211\n",
-      " -0.23979251 -0.06665712 -0.23979251 -0.75919866  0.45274903  1.83783211\n",
-      "  0.45274903 -1.79801097  0.10647826 -0.23979251  0.62588442 -1.62487559\n",
-      "  0.10647826 -0.06665712  1.83783211 -0.06665712  0.97215519 -1.4517402\n",
-      "  0.10647826  1.66469673  1.31842596  0.45274903 -0.41292789 -0.06665712\n",
-      "  1.31842596 -0.06665712 -1.10546943  0.45274903  0.10647826  0.62588442\n",
-      " -2.14428174 -1.10546943 -1.10546943 -0.23979251 -0.41292789  0.7990198\n",
-      " -0.93233405  1.83783211  1.83783211  1.14529057  0.27961365 -0.41292789\n",
-      " -0.93233405  1.14529057 -0.06665712  0.10647826 -1.79801097 -1.4517402\n",
-      "  1.83783211  0.27961365  0.62588442 -0.93233405 -0.75919866  0.97215519\n",
-      " -1.27860482 -0.58606328  0.7990198   0.27961365 -0.41292789  1.83783211\n",
-      "  0.7990198  -1.27860482  0.7990198   0.45274903  0.62588442  0.27961365\n",
-      " -0.58606328 -0.41292789  1.31842596  0.45274903 -0.58606328  0.27961365\n",
-      " -0.58606328  0.45274903  0.7990198  -1.27860482 -0.58606328  0.27961365\n",
-      " -0.58606328 -1.79801097 -0.23979251  0.10647826  0.7990198  -0.75919866\n",
-      "  0.45274903 -0.41292789  0.7990198   0.62588442 -0.58606328  0.10647826\n",
-      " -1.10546943 -0.06665712  0.7990198   0.62588442  0.62588442 -1.97114636\n",
-      "  0.62588442 -0.58606328 -1.27860482  0.10647826  1.83783211  0.62588442\n",
-      "  1.83783211 -1.4517402   0.27961365  1.83783211  0.7990198   1.83783211\n",
-      " -0.93233405 -0.58606328 -0.23979251 -1.10546943 -0.41292789  1.14529057\n",
-      "  0.45274903  0.62588442 -1.62487559  0.7990198  -3.18309405 -0.06665712\n",
-      " -0.41292789 -0.06665712 -0.41292789 -1.27860482 -0.23979251  0.62588442\n",
-      "  0.62588442 -0.58606328 -0.41292789 -2.49055251 -2.14428174  1.66469673\n",
-      " -0.93233405 -0.41292789 -1.10546943 -1.10546943 -0.75919866 -1.4517402\n",
-      " -0.58606328  0.7990198   0.7990198  -0.23979251 -0.06665712 -0.75919866\n",
-      "  1.31842596  0.62588442 -1.4517402  -0.23979251 -1.10546943  0.27961365\n",
-      " -0.58606328  0.27961365 -0.41292789  0.62588442 -0.75919866 -0.23979251\n",
-      " -0.75919866 -0.06665712 -0.58606328 -0.75919866  0.10647826 -0.06665712\n",
-      " -1.62487559  0.27961365  1.66469673  0.27961365 -0.06665712  0.97215519\n",
-      " -0.41292789  1.49156134  0.97215519  1.14529057 -0.23979251  1.14529057\n",
-      " -0.58606328 -0.41292789  0.7990198  -1.10546943 -0.23979251 -0.93233405\n",
-      " -1.10546943  0.27961365 -0.06665712  1.83783211 -0.41292789  0.7990198\n",
-      "  0.7990198   0.27961365 -0.23979251 -0.23979251  0.27961365  1.83783211\n",
-      "  0.45274903 -0.41292789  0.97215519 -0.41292789 -0.41292789  0.62588442\n",
-      " -0.93233405 -1.4517402   1.31842596 -0.06665712  0.45274903  0.45274903\n",
-      "  1.83783211  0.62588442  0.10647826  0.27961365 -1.10546943  0.27961365\n",
-      " -0.23979251 -1.10546943  0.97215519  0.10647826]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
-      "  data.loc[:, field] = (data[field] - mean) / std\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train loss:  0.27631608246501976\n",
-      "Train loss:  0.27631608246501976\n",
-      "Train loss:  0.27631608246501976\n",
-      "Train loss:  0.27631608246501976\n",
-      "Train loss:  0.27631608246501976\n",
-      "Train loss:  0.27631608246501976\n",
-      "Train loss:  0.27631608246501976\n",
-      "Train loss:  0.27631608246501976\n",
-      "Train loss:  0.27631608246501976\n",
-      "Train loss:  0.27631608246501976\n",
-      "Prediction accuracy: 0.300\n",
-      "Your accuracy is too low.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -113,7 +29,7 @@
     "\n",
     "# Hyperparameters\n",
     "n_hidden = 2  # number of hidden units\n",
-    "epochs = 900\n",
+    "epochs = 3000\n",
     "learnrate = 0.005\n",
     "n_records, n_features = features.shape\n",
     "last_loss = None\n",
@@ -125,33 +41,33 @@
     "for e in range(epochs):\n",
     "    del_w_input_hidden = np.zeros(weights_input_hidden.shape)\n",
     "    del_w_hidden_output = np.zeros(weights_hidden_output.shape)\n",
-    "    for x, y in zip(features.values, targets):\n",
+    "    for x, y in zip(features.values.astype(float), targets):\n",
     "        ## Forward pass ##\n",
     "        # TODO: Calculate the output\n",
-    "        hidden_input = None\n",
-    "        hidden_output = None\n",
-    "        output = None\n",
+    "        hidden_input = np.dot(x, weights_input_hidden)\n",
+    "        hidden_output = sigmoid(hidden_input)\n",
+    "        output = sigmoid(np.dot(hidden_output, weights_hidden_output))\n",
     "        \n",
     "        ## Backward pass ##\n",
     "        # TODO: Calculate the network's prediction error\n",
-    "        error = None\n",
+    "        error = y - output\n",
     "        \n",
     "        # TODO: Calculate error term for the output unit\n",
-    "        output_error_term = None\n",
+    "        output_error_term = error * output * (1 - output)\n",
     "       \n",
     "        ## propagate errors to hidden layer\n",
     "        # TODO: Calculate the hidden layer's contribution to the error\n",
-    "        hidden_error = None\n",
+    "        hidden_error = np.dot(weights_hidden_output, output_error_term)\n",
     "        \n",
     "        # TODO: Calculate the error term for the hidden layer\n",
-    "        hidden_error_term = None\n",
+    "        hidden_error_term = hidden_error * hidden_output * (1 - hidden_output)\n",
     "        \n",
     "        # TODO: Update the change in weights\n",
-    "        del_w_hidden_output += 0\n",
-    "        del_w_input_hidden += 0\n",
+    "        del_w_hidden_output += output_error_term * hidden_output\n",
+    "        del_w_input_hidden += hidden_error_term * x[:, None]\n",
     "    # TODO: Update weights  (don't forget to division by n_records or number of samples)\n",
-    "    weights_input_hidden += 0\n",
-    "    weights_hidden_output += 0\n",
+    "    weights_input_hidden += learnrate * del_w_input_hidden / n_records\n",
+    "    weights_hidden_output += learnrate * del_w_hidden_output / n_records\n",
     "    \n",
     "    # Printing out the mean square error on the training set\n",
     "    if e % (epochs / 10) == 0:\n",
